--- a/css/global.css
+++ b/css/global.css
@@ -14,12 +14,106 @@ html {
     height: 100%;
 }
 
+ul li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    display: flex;
+}
+
 body {
+    font-family: "Heebo", sans-serif;
     height: 100%;
     display: flex;
     flex-direction: column;
+    font-family: var(--main-font-family);
+    color: var(--darc-color);
+    font-size: 1.6rem;
+    line-height: 2.3rem;
 }
 
 main {
     flex-grow: 1;
+}
+
+.container {
+    width: 100%;
+    max-width: 985px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 5rem;
+    padding-right: 5rem;
+}
+
+.header-container {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 2.7rem;
+    padding-bottom: 2.7rem;
+}
+
+.sitenav {
+    margin-left: auto;
+}
+
+.sitenav-list {
+    display: flex;
+    gap: 3.3rem;
+}
+
+.sitenav-link {
+    color: var(--darc-color);
+    font-weight: 500;
+    font-size: 2rem;
+    line-height: 3rem;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.sitenav-link: hover {
+    color: #ff6464;
+}
+
+.main-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 7rem;
+    padding-top: 10rem;
+}
+
+.main-info h1 {
+    font-weight: 700;
+    font-size: 4.4rem;
+    line-height: 6rem;
+    margin-bottom: 4rem;
+    max-width: 506px;
+}
+
+.main-info p {
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    max-width: 497px;
+    margin-bottom: 4.7rem;
+}
+
+.main-info button {
+    background-color: #db1616;
+    color: rgba(255, 255, 255, 1);
+    padding: 19px 21px;
+    border-radius: 5px;
+    transition: all 0.5s;
+}
+
+.main-info button :hover {
+    background-color: #622d2d;
+}
+
+.resent-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
