--- a/css/variables.css
+++ b/css/variables.css
@@ -4,5 +4,5 @@
     --secondary-color: #00a8cc;
     --darc-color: rgba(33, 36, 61, 1);
     --light-color: #8695a4;
-    -o-transition: all 0.5s;
+    --transition: all 0.5s;
 }
