--- a/css/global.css
+++ b/css/global.css
@@ -187,7 +187,7 @@ main {
 }
 
 .dashboard-info {
-    margin: 0 18px;
+    margin: 0 10px;
 }
 
 .dashboards-img {
@@ -243,7 +243,8 @@ main {
 
 @media screen and(max-width:1200px) {
     .container {
-        padding: 0 15px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
 
@@ -253,6 +254,12 @@ main {
     }
     .main-container {
         padding-top: 7rem;
+    }
+    .resert-container,
+    .container-features,
+    .container-footer {
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
 
@@ -318,8 +325,24 @@ main {
     .resent-header {
         align-items: center;
     }
-    .resent-main1 {
+    .resent-container .resent-main1 {
         flex-direction: column;
+    }
+    .resent-block h3 {
+        font-size: 2.2rem;
+        line-height: 3rem;
+        width: 327px;
+    }
+    .resent-block p {
+        width: 314px;
+    }
+    .date {
+        font-size: 1.6rem;
+        line-height: 2.4rem;
+    }
+    .profession {
+        font-size: 1.6rem;
+        line-height: 2.4rem;
     }
     .dashboards {
         flex-direction: column;
