--- a/css/global.css
+++ b/css/global.css
@@ -347,4 +347,18 @@ main {
     .dashboards {
         flex-direction: column;
     }
+    .dashboard-info h3 {
+        font-size: 2.4rem;
+        line-height: 3rem;
+    }
+    .dashboard-info p {
+        width: 344px;
+    }
+    .dashboard-year {
+        font-size: 1.6rem;
+    }
+    .dashboard-gray {
+        font-size: 1.6rem;
+        line-height: 2.4rem;
+    }
 }
